# zzz-onedragon-editor

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: charge_plan_config_spec.md  notorious_hunt_config_spec.md
scripts/: package-portable.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: charge_plan.rs  mod.rs  notorious_hunt.rs  options.rs  project.rs
src-tauri/src/domain/: charge_plan.rs  compendium.rs  mod.rs  notorious_hunt.rs  team.rs
src-tauri/src/infra/: fsx.rs  mod.rs
